[gd_scene load_steps=5 format=3 uid="uid://cd8j6rfxdolha"]

[ext_resource type="Script" path="res://scenes/intro/IntroScene.gd" id="1_i2er0"]
[ext_resource type="PackedScene" uid="uid://bohdvcknrsnub" path="res://scenes/platter/PlatterScene.tscn" id="2_1o03a"]
[ext_resource type="Resource" uid="uid://lt2yk44acg4s" path="res://dialogue/intro.dialogue" id="2_godk4"]
[ext_resource type="Script" path="res://scenes/Camera.gd" id="3_cjuo0"]

[node name="IntroScene" type="Node2D"]
position = Vector2(299, 161)
script = ExtResource("1_i2er0")
dialogue_resource = ExtResource("2_godk4")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Camera" type="Camera2D" parent="."]
position = Vector2(22, 19)
position_smoothing_enabled = true
script = ExtResource("3_cjuo0")

[node name="PlatterScene" parent="." instance=ExtResource("2_1o03a")]
position = Vector2(5, 340)

[node name="WiggleTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true
autostart = true

[node name="DialogueTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="ScreenCenter" type="Marker2D" parent="."]
position = Vector2(8, 56)

[node name="EndSceneTimer" type="Timer" parent="."]
wait_time = 1.5

[connection signal="timeout" from="WiggleTimer" to="." method="_on_wiggle_timer_timeout"]
[connection signal="timeout" from="DialogueTimer" to="." method="_on_dialogue_timer_timeout"]
[connection signal="timeout" from="EndSceneTimer" to="." method="_on_end_scene_timer_timeout"]
